--- a/a_wod/light_edit.html
+++ b/a_wod/light_edit.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Light</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="lightstyle.css" />
   </head>
   <body>
     <nav class="navbar">
